@@ -1,16 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gnome-mastermind-0.3-gentoo.patch 220 RMD160 c94aeabada8783af3f615fb6af4dcb3f7b71b057 SHA1 cd0d0566a34abc5908b59dc5ab9db71bd8497459 SHA256 2bedbca0cc454609d70a92b63d8bea8b02b6549acc60efe6aaebd7b9f82e7031
 MD5 21d661abedcbf7947c07f6d0d5a8ed88 files/gnome-mastermind-0.3-gentoo.patch 220
 RMD160 c94aeabada8783af3f615fb6af4dcb3f7b71b057 files/gnome-mastermind-0.3-gentoo.patch 220
 SHA256 2bedbca0cc454609d70a92b63d8bea8b02b6549acc60efe6aaebd7b9f82e7031 files/gnome-mastermind-0.3-gentoo.patch 220
 DIST gnome-mastermind-0.3.tar.bz2 699229 RMD160 474ca3c5b4eac45aab4c9caf62143771085b1868 SHA1 5d2c672046d2cd1f1d8fdc07b7bee024c94ba4f5 SHA256 73f175be3333f7883bea18d11b13682c0c4bcc328f82dcf15d8a5c0a0b99578f
-EBUILD gnome-mastermind-0.3.ebuild 822 RMD160 82a2ba938c217bb41637476beefbb8b38b8d5d64 SHA1 753ba340d320bd1b96ec9170b723ee92c21ca8fd SHA256 0ffd6d00d80fee280f2714d657b8d3d64615a680528a75d115b001101b1e2bad
-MD5 272f39c51258ca87dbae3b18eef55383 gnome-mastermind-0.3.ebuild 822
-RMD160 82a2ba938c217bb41637476beefbb8b38b8d5d64 gnome-mastermind-0.3.ebuild 822
-SHA256 0ffd6d00d80fee280f2714d657b8d3d64615a680528a75d115b001101b1e2bad gnome-mastermind-0.3.ebuild 822
-MISC ChangeLog 570 RMD160 858f44b31b500e5f0344c282dec495e88ee532cf SHA1 7dce9b5384a96699180228243268b319b739077f SHA256 58ea52b1d16f16a7817cbc6fa119eecfd13c492d12cb1f2231f41ee952c94c60
-MD5 389d5d550e2bad92835cefbd80e67daa ChangeLog 570
-RMD160 858f44b31b500e5f0344c282dec495e88ee532cf ChangeLog 570
-SHA256 58ea52b1d16f16a7817cbc6fa119eecfd13c492d12cb1f2231f41ee952c94c60 ChangeLog 570
+EBUILD gnome-mastermind-0.3.ebuild 846 RMD160 ade1a99797698c2d76ef60789771f4e440610bf1 SHA1 7d973bf8c634566103cd2cd69bcee4649e10fb67 SHA256 95dbb5cb13cb11af10114533871b85ebc73b5ff97edf63addcad112fa1c560cd
+MD5 d607dfa54e9f058654aa8937f1953435 gnome-mastermind-0.3.ebuild 846
+RMD160 ade1a99797698c2d76ef60789771f4e440610bf1 gnome-mastermind-0.3.ebuild 846
+SHA256 95dbb5cb13cb11af10114533871b85ebc73b5ff97edf63addcad112fa1c560cd gnome-mastermind-0.3.ebuild 846
+MISC ChangeLog 685 RMD160 79a0a2db1c1211d626600eb2552db852754d7103 SHA1 bfb0ee31f5007c699f048ed1c6b73a4e87d0899c SHA256 51320c7c9b17e296b6baa3ba8f2695ba0d9017ffa3038e5fe52afd8e48fceae6
+MD5 d96108c40906e2fb8bdaa898cae87a60 ChangeLog 685
+RMD160 79a0a2db1c1211d626600eb2552db852754d7103 ChangeLog 685
+SHA256 51320c7c9b17e296b6baa3ba8f2695ba0d9017ffa3038e5fe52afd8e48fceae6 ChangeLog 685
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
@@ -18,3 +21,10 @@ SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata
 MD5 3515508200768330199b9e3a02818617 files/digest-gnome-mastermind-0.3 265
 RMD160 ca0dc42f972e5774c7e1acdc37d4ee91131793e5 files/digest-gnome-mastermind-0.3 265
 SHA256 b414aa05bb9269e08204bd1b860e846611030af6402e2b7709b302caf7a3782c files/digest-gnome-mastermind-0.3 265
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHlaiadz7hIScOURERAncpAKDb344zIkRb+WIuWmaptXdAEz1HuQCgpYuz
+KKvXvSYWs7EWugKdVZmMwIc=
+=LIIn
+-----END PGP SIGNATURE-----
