@@ -1,6 +1,9 @@
 # ChangeLog for games-board/gnome-mastermind
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/gnome-mastermind/ChangeLog,v 1.2 2007/09/02 13:01:36 nixnut Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-board/gnome-mastermind/ChangeLog,v 1.3 2008/01/22 08:25:56 nyhm Exp $
+
+  22 Jan 2008; Tristan Heaven <nyhm@gentoo.org> gnome-mastermind-0.3.ebuild:
+  Add gnome-doc-utils dep, bug #206304
 
   02 Sep 2007; nixnut <nixnut@gentoo.org> gnome-mastermind-0.3.ebuild:
   Added ~ppc wrt bug 190250
